Bug 149739 - Inserting a child to a slot assigned node doesn't trigger repaint
Summary: Inserting a child to a slot assigned node doesn't trigger repaint
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Layout and Rendering (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Nobody
URL:
Keywords:
Depends on:
Blocks: 148695
  Show dependency treegraph
 
Reported: 2015-10-01 21:08 PDT by Ryosuke Niwa
Modified: 2015-10-03 03:15 PDT (History)
10 users (show)

See Also:


Attachments
Demo (415 bytes, text/html)
2015-10-01 21:10 PDT, Ryosuke Niwa
no flags Details
patch (4.61 KB, patch)
2015-10-02 07:39 PDT, Antti Koivisto
buildbot: commit-queue-
Details | Formatted Diff | Diff
Archive of layout-test-results from ews103 for mac-mavericks (624.35 KB, application/zip)
2015-10-02 08:12 PDT, Build Bot
no flags Details
test fix (4.69 KB, patch)
2015-10-02 14:08 PDT, Antti Koivisto
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Ryosuke Niwa 2015-10-01 21:08:53 PDT
When you insert a child to a node assigned to a slot, we don't trigger a repaint.
Comment 1 Ryosuke Niwa 2015-10-01 21:10:19 PDT
Created attachment 262314 [details]
Demo
Comment 2 Antti Koivisto 2015-10-02 07:39:31 PDT
Created attachment 262330 [details]
patch
Comment 3 Build Bot 2015-10-02 08:12:17 PDT
Comment on attachment 262330 [details]
patch

Attachment 262330 [details] did not pass mac-ews (mac):
Output: http://webkit-queues.webkit.org/results/236636

New failing tests:
fast/shadow-dom/insert-child-to-assigned-node.html
Comment 4 Build Bot 2015-10-02 08:12:23 PDT
Created attachment 262331 [details]
Archive of layout-test-results from ews103 for mac-mavericks

The attached test failures were seen while running run-webkit-tests on the mac-ews.
Bot: ews103  Port: mac-mavericks  Platform: Mac OS X 10.9.5
Comment 5 Antti Koivisto 2015-10-02 14:08:58 PDT
Created attachment 262349 [details]
test fix
Comment 6 WebKit Commit Bot 2015-10-02 16:32:58 PDT
Comment on attachment 262349 [details]
test fix

Clearing flags on attachment: 262349

Committed r190530: <http://trac.webkit.org/changeset/190530>
Comment 7 WebKit Commit Bot 2015-10-02 16:33:04 PDT
All reviewed patches have been landed.  Closing bug.
Comment 8 Alexey Proskuryakov 2015-10-02 21:58:45 PDT
fast/shadow-dom/insert-child-to-assigned-node.html times out on Windows, Gtk and Efl every time.
Comment 9 Ryosuke Niwa 2015-10-03 00:03:58 PDT
(In reply to comment #8)
> fast/shadow-dom/insert-child-to-assigned-node.html times out on Windows, Gtk
> and Efl every time.

Oh oops, I guess notifyDone is never called on those platforms because we throw an exception :( Will fix. Thanks for letting me know.
Comment 10 Ryosuke Niwa 2015-10-03 03:15:14 PDT
Fixed the test in https://trac.webkit.org/changeset/190544.