Inserting a child to a slot assigned node doesn't trigger repaint https://bugs.webkit.org/show_bug.cgi?id=149739

Reviewed by Ryosuke Niwa.

Source/WebCore:

Test: fast/shadow-dom/insert-child-to-assigned-node.html

* dom/Node.cpp:
(WebCore::Node::derefEventTarget):
(WebCore::traverseStyleParent):
(WebCore::traverseFirstStyleParent):
(WebCore::Node::updateAncestorsForStyleRecalc):

    Traverse in style parent order.

LayoutTests:

* fast/shadow-dom/insert-child-to-assigned-node-expected.html: Added.
* fast/shadow-dom/insert-child-to-assigned-node.html: Added.


Canonical link: https://commits.webkit.org/167885@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@190530 268f45cc-cd09-0410-ab3c-d52691b4dbfc